coupon spacing issue resolved

--- a/resources/assets/scss/_cart.scss
+++ b/resources/assets/scss/_cart.scss
@@ -609,6 +609,10 @@ body{
     }
 }
 
+.coupon-wrapper{
+    margin-bottom: 196px;
+}
+
 .coupon-radio{
     &:checked{
         & + .radio-label{
